[gd_scene load_steps=8 format=3 uid="uid://bhpxkwdmud628"]

[ext_resource type="Texture2D" uid="uid://c5bw8wqgbp43v" path="res://tex/UI/logo.svg" id="1_k2uie"]
[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_w2uav"]
[ext_resource type="Theme" uid="uid://2ry5tylxrkis" path="res://tex/themes/main_menu_theme.tres" id="2_sif88"]
[ext_resource type="Texture2D" uid="uid://c3mtuhtnv4o7t" path="res://tex/UI/men_icon.svg" id="3_rxnjy"]
[ext_resource type="AudioStream" uid="uid://xjgcjmy0w5by" path="res://audio/puzzle_dreams.mp3" id="4_0044q"]
[ext_resource type="Texture2D" uid="uid://blm625iff8nrv" path="res://tex/UI/Brasao4_vertical_cor_300dpi.png" id="5_gjgh3"]
[ext_resource type="PackedScene" uid="uid://gl8yi16kq1ry" path="res://scenes/config_menu.tscn" id="5_xlk52"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_w2uav")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="CenterContainer" type="CenterContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 121

[node name="logo" type="TextureRect" parent="Control/MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 119.04)
layout_mode = 2
texture = ExtResource("1_k2uie")
expand_mode = 3
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 260
theme_override_constants/margin_right = 260

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/CenterContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="novaSalaBtn" type="Button" parent="Control/MarginContainer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_sif88")
text = "Nova sala"

[node name="convidadoBtn" type="Button" parent="Control/MarginContainer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_sif88")
text = "Convidado"

[node name="configBtn" type="TextureButton" parent="Control/MarginContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 0
texture_normal = ExtResource("3_rxnjy")
ignore_texture_size = true
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
custom_minimum_size = Vector2(0, 110)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
alignment = 2

[node name="TextureRect" type="TextureRect" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_gjgh3")
expand_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" parent="Control/CenterContainer" instance=ExtResource("5_xlk52")]
visible = false
layout_mode = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_0044q")
autoplay = true
bus = &"musica"

[connection signal="pressed" from="Control/MarginContainer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/novaSalaBtn" to="." method="_on_nova_sala_btn_pressed"]
[connection signal="pressed" from="Control/MarginContainer/CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/convidadoBtn" to="." method="_on_convidado_btn_pressed"]
[connection signal="pressed" from="Control/MarginContainer/configBtn" to="." method="_on_config_btn_pressed"]
